# Robot-Teleoperation

./: README.md
Magnet Tracking/: README.md  ROS_tracker.py  mag_field_tracker_v6.py  requirements.txt
Magnet Tracking/3D_Mag_Frame/: 3DFrame_Modular_Assem.SLDASM  4022_QT Cover.SLDPRT  4022_QT.SLDPRT  4022_QT_withCover.SLDASM  Housing_Teensy4.SLDPRT  Teensy40 without headers.stp.SLDPRT  Unit_4_Modular_Assem.SLDASM  Unit_5_Modular_Assem.SLDASM  Unit_Frame.SLDPRT  WallFrame_Modular_Assem.SLDASM
Magnet Tracking/Mag3D_plateX/: Mag3D_plateX.ino
Magnet Tracking/Mag3D_plateY/: Mag3D_plateY.ino
Magnet Tracking/Mag3D_plateZ/: Mag3D_plateZ.ino
Myo_armband_tracking/: myo_emg_rt_pyqtgraph.py  requirements.txt
Myo_armband_tracking/firmware_v2_0___IMU/: README.md  firmware_v2_0___IMU.ino
Myo_armband_tracking/record/: README.md
Myo_armband_tracking/train/: Data_Testing.ipynb  EMG_RUN_main.py  README.md  Training.ipynb  Training_example.ipynb
Myo_armband_tracking/train/compiled_data/: test_data.npz  val_data.npz
Myo_armband_tracking/train/data/: EMG_dataset.py  README.md  compile_utils.py
Robot Station/: README.md  sender.py
Robot Station/franka_ws/libfranka/examples/: Telecontrol.cpp
Telecontrol v3.0 - Long Distance/: CMakeLists.txt  README.txt  Telecontrol.slx  main.cpp  receiver.py  requirements.txt
Telecontrol v3.0 - Long Distance/Sensor Data Transmission/Teensy_Transmitter/Teensy_Transmitter_Serial/: Teensy_Transmitter_Serial.ino
Telecontrol v3.0 - Long Distance/Sensor Data Transmission/Teensy_Transmitter/Teensy_Transmitter_Serial___fake/: Teensy_Transmitter_Serial___fake.ino
Telecontrol v3.0 - Long Distance/Sensor Data Transmission/libraries/Adafruit_MLX90393/: Adafruit_MLX90393.cpp  Adafruit_MLX90393.h
Telecontrol v3.0 - Long Distance/Sensor Data Transmission/libraries/cminpack/: appveyor.yml  cminpack.h
Telecontrol v3.0 - Long Distance/Sensor Data Transmission/libraries/lm_library_pro_Huimin/: lm_library_pro_Huimin.cpp  lm_library_pro_Huimin.h
(+63 files in other folders)
